--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ They are more threatening than <a href="javascript:Sidenote.openColumn('#main','
 <p>We have also identified <a href="javascript:Sidenote.openColumn('#main','#otherdefensiveideas','several%20simple%20techniques')">several simple techniques</a> you can use in lieu of Beer Garden to protect your web applications from high-density attacks.</p>
 <p>By <a href="mailto:mikegagnon@gmail.com">Mike Gagnon</a> and <a href="mailto:ivan.balepin@gmail.com">Ivan Balepin</a>.</p>
 <p>This document was created using <a href="javascript:Sidenote.openColumn('#main','#sidenote','Sidenote')">Sidenote</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
 </div>
 
 <div id='conclusion'>
