--- a/index.html
+++ b/index.html
@@ -308,7 +308,11 @@ They are more threatening than <a href="javascript:Sidenote.openColumn('#main','
 <p>We conclude that <a href="javascript:Sidenote.openColumn('#main','#conclusion','the%20Beer%20Garden%20approach%20is%20effective%20in%20many%20circumstances')">the Beer Garden approach is effective in many circumstances</a>, and we identify <a href="javascript:Sidenote.openColumn('#main','#futurework','future%20work')">future work</a> that could further improve its defensive capability.</p>
 <p>We have also identified <a href="javascript:Sidenote.openColumn('#main','#otherdefensiveideas','several%20simple%20techniques')">several simple techniques</a> you can use in lieu of Beer Garden to protect your web applications from high-density attacks.</p>
 <p>By <a href="mailto:mikegagnon@gmail.com">Mike Gagnon</a> and <a href="mailto:ivan.balepin@gmail.com">Ivan Balepin</a>.</p>
-<p>This document was created using <a href="javascript:Sidenote.openColumn('#main','#sidenote','Sidenote')">Sidenote</a>.</p>
+<ul>
+<li>This document was created using <a href="http://mikegagnon.com/sidenote">Sidenote</a>.</li>
+<li>Source code for this doc is <a href="https://github.com/mikegagnon/beergarden_doc">on Github</a>.</li>
+<li>Source code for the Beer Garden is also <a href="https://github.com/mikegagnon/nginx-overload-handler">on Github</a>.</li>
+</ul>
 <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
 </div>
 
